# DRL_for_TankTrouble

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Controller.cc  Controller.h  Makefile  Object.h  QUICK_START_TRAINING.md  REWARD_IMPROVEMENTS_V2.md  RL_IMPROVEMENTS_SUMMARY.md  RL_TRAINING_GUIDE.md  RL_TRAINING_README.md  Window.cc  Window.h  build.sh  build_python_module.sh  checkpoint_dqn.pth  cmake_install.cmake  log  pyproject.toml  requestments.txt  shorthand
bindings/: bindings.cc  rl_bindings.cc
controller/: Data.h  LocalController.cc  LocalController.h  RLController.cc  RLController.h
event/: ControlEvent.cc  ControlEvent.h
python/: MODEL_USAGE.md  debug_agent_actions.py  integrate_rl_training.py  start_rl_training.py  test.py  test_env.py  test_env_standalone.py  test_gui_training.py  test_state_info.py  test_training.py  train_dqn.py  train_ppo.py  train_with_gui.py
rl/: TankEnv.cc  TankEnv.h
smithAI/: AgentSmith.cc  AgentSmith.h  AttackStrategy.cc  AttackStrategy.h  ContactStrategy.cc  ContactStrategy.h  DodgeStrategy.cc  DodgeStrategy.h  Strategy.h
view/: EntryView.cc  EntryView.h
view/component/: RoomItem.cc
